test/force-app/main/default/objects/Projet__c/fields/A_facturer__c.field-meta.xml
<CustomField>
    <fullName>A_facturer__c</fullName>
    <label>A facturer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>