test/force-app/main/default/objects/Projet__c/fields/Adresse_de_Livraison_2__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_Livraison_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact de livraison</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets (Adresse de Livraison 2)</relationshipLabel>
    <relationshipName>Projets1</relationshipName>
    <type>Lookup</type>
</CustomField>