test/force-app/main/default/objects/Projet__c/fields/Adresse_de_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_Livraison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse de Livraison</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projets (Adresse de Livraison)</relationshipLabel>
    <relationshipName>Projets5</relationshipName>
    <type>Lookup</type>
</CustomField>