test/force-app/main/default/objects/Projet__c/fields/Adresse_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Facturation__c</fullName>
    <label>Adresse Facturation</label>
    <type>Address</type>
</CustomField>