test/force-app/main/default/objects/Projet__c/fields/Autre_contact__c.field-meta.xml
<CustomField>
    <fullName>Autre_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autre contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets (Autre contact)</relationshipLabel>
    <relationshipName>ProjetsXeV8</relationshipName>
    <type>Lookup</type>
</CustomField>