test/force-app/main/default/objects/Projet__c/fields/Autre_responsable__c.field-meta.xml
<CustomField>
    <fullName>Autre_responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chef de projet</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projets3</relationshipName>
    <type>Lookup</type>
</CustomField>