test/force-app/main/default/objects/Projet__c/fields/Autres_intervenants__c.field-meta.xml
<CustomField>
    <fullName>Autres_intervenants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autres intervenants</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets (Autres intervenants)</relationshipLabel>
    <relationshipName>ProjetsRu6H</relationshipName>
    <type>Lookup</type>
</CustomField>