test/force-app/main/default/objects/Projet__c/fields/Avance_client__c.field-meta.xml
<CustomField>
    <fullName>Avance_client__c</fullName>
    <label>Avance client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>