test/force-app/main/default/objects/Projet__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armoires</fullName>
            </value>
            <value>
                <fullName>Portes</fullName>
            </value>
            <value>
                <fullName>Cuisines</fullName>
            </value>
            <value>
                <fullName>Reno</fullName>
            </value>
            <value>
                <fullName>Airkel</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>