test/force-app/main/default/objects/Projet__c/fields/Calculateur_2__c.field-meta.xml
<CustomField>
    <fullName>Calculateur_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculateur 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projets2</relationshipName>
    <type>Lookup</type>
</CustomField>