test/force-app/main/default/objects/Projet__c/fields/Calculateur__c.field-meta.xml
<CustomField>
    <fullName>Calculateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculateur 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projets</relationshipName>
    <type>Lookup</type>
</CustomField>