test/force-app/main/default/objects/Projet__c/fields/Calculation_net_avec_provision__c.field-meta.xml
<CustomField>
    <fullName>Calculation_net_avec_provision__c</fullName>
    <label>Calculation PR (avec provisions)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>