test/force-app/main/default/objects/Projet__c/fields/Chef_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chef de projet</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets (Chef de projet)</relationshipLabel>
    <relationshipName>Projets5</relationshipName>
    <type>Lookup</type>
</CustomField>