test/force-app/main/default/objects/Projet__c/fields/Compte_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Compte_Facturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte facturation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projets (Compte Facturation)</relationshipLabel>
    <relationshipName>Projets3</relationshipName>
    <type>Lookup</type>
</CustomField>