test/force-app/main/default/objects/Projet__c/fields/Compte_livraison__c.field-meta.xml
<CustomField>
    <fullName>Compte_livraison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte livraison</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projets (Compte livraison)</relationshipLabel>
    <relationshipName>Projets4</relationshipName>
    <type>Lookup</type>
</CustomField>