test/force-app/main/default/objects/Projet__c/fields/Comptefacturation__c.field-meta.xml
<CustomField>
    <fullName>Comptefacturation__c</fullName>
    <formula>Nom_du_compte__r.Compte_Facturation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte facturation</label>
    <type>Text</type>
</CustomField>