test/force-app/main/default/objects/Projet__c/fields/Conditons_paiement__c.field-meta.xml
<CustomField>
    <fullName>Conditons_paiement__c</fullName>
    <formula>Nom_du_compte__r.Conditions_paiement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditions paiement</label>
    <type>Text</type>
</CustomField>