test/force-app/main/default/objects/Projet__c/fields/Correction_confirm__c.field-meta.xml
<CustomField>
    <fullName>Correction_confirm__c</fullName>
    <label>Correction confirmé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>