test/force-app/main/default/objects/Projet__c/fields/Date_d_but_travaux__c.field-meta.xml
<CustomField>
    <fullName>Date_d_but_travaux__c</fullName>
    <label>Date début travaux</label>
    <type>Date</type>
</CustomField>