test/force-app/main/default/objects/Projet__c/fields/Date_de_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fermeture__c</fullName>
    <label>Date d&apos;adjudication</label>
    <type>Date</type>
</CustomField>