test/force-app/main/default/objects/Projet__c/fields/Date_fin_travaux__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_travaux__c</fullName>
    <label>Date fin travaux</label>
    <type>Date</type>
</CustomField>