test/force-app/main/default/objects/Projet__c/fields/Descriptif__c.field-meta.xml
<CustomField>
    <fullName>Descriptif__c</fullName>
    <label>Descriptif</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>