test/force-app/main/default/objects/Projet__c/fields/Difference_Facture__c.field-meta.xml
<CustomField>
    <fullName>Difference_Facture__c</fullName>
    <formula>Facture__c - Total_Facture_Documents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Différence Facturé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>