test/force-app/main/default/objects/Projet__c/fields/Difference_Offert__c.field-meta.xml
<CustomField>
    <fullName>Difference_Offert__c</fullName>
    <formula>Offert__c - Total_Offert_Documents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Différence Offert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>