test/force-app/main/default/objects/Projet__c/fields/Facture__c.field-meta.xml
<CustomField>
    <fullName>Facture__c</fullName>
    <label>Facturé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>