test/force-app/main/default/objects/Projet__c/fields/Famille_commerciale1__c.field-meta.xml
<CustomField>
    <fullName>Famille_commerciale1__c</fullName>
    <label>Famille commerciale1</label>
    <length>225</length>
    <type>Text</type>
</CustomField>