test/force-app/main/default/objects/Projet__c/fields/Famille_commerciale__c.field-meta.xml
<CustomField>
    <fullName>Famille_commerciale__c</fullName>
    <label>Famille commerciale</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Secteur_d_activite__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>fc.00.54 Boutique</fullName>
                <label>Boutique</label>
            </value>
            <value>
                <fullName>fc.00.55 Corner</fullName>
                <label>Corner</label>
            </value>
            <value>
                <fullName>fc.00.56 Shop in shop</fullName>
                <label>Shop-in-shop</label>
            </value>
            <value>
                <fullName>fc.00.57 Pop-up</fullName>
                <label>Pop-up</label>
            </value>
            <value>
                <fullName>fc.00.58 Mobilier de série</fullName>
                <label>Mobilier de série</label>
            </value>
            <value>
                <fullName>fc.00.59 Stands d&apos;exposition</fullName>
                <label>Stand d’exposition</label>
            </value>
            <value>
                <fullName>fc.01.04 Hôtellerie</fullName>
                <label>Hôtellerie</label>
            </value>
            <value>
                <fullName>fc.01.06 Santé</fullName>
                <label>Santé</label>
            </value>
            <value>
                <fullName>fc.01.07 Musées</fullName>
                <label>Musées</label>
            </value>
            <value>
                <fullName>fc.01.08 Commercial</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>fc.01.09 Immeuble</fullName>
                <label>Immeuble</label>
            </value>
            <value>
                <fullName>fc.01.10 Privé</fullName>
                <label>Privé</label>
            </value>
            <value>
                <fullName>fc.01.14 Administratif</fullName>
                <label>Administratif</label>
            </value>
            <value>
                <fullName>fc.01.16 Scolaire</fullName>
                <label>Scolaire</label>
            </value>
            <value>
                <fullName>fc.01.17 Airkel</fullName>
                <label>Airkel</label>
            </value>
            <value>
                <fullName>fc.01.18 Écrin/PLV</fullName>
                <label>Écrin/PLV</label>
            </value>
            <value>
                <fullName>fc.00.57, Pop-up</fullName>
            </value>
            <value>
                <fullName>Interco</fullName>
            </value>
            <value>
                <fullName>Travaux internes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>