test/force-app/main/default/objects/Projet__c/fields/Garanties_et_retenues__c.field-meta.xml
<CustomField>
    <fullName>Garanties_et_retenues__c</fullName>
    <label>Garanties et retenues</label>
    <type>TextArea</type>
</CustomField>