test/force-app/main/default/objects/Projet__c/fields/Information_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Information_Livraison__c</fullName>
    <label>Information Livraison</label>
    <length>225</length>
    <type>Text</type>
</CustomField>