test/force-app/main/default/objects/Projet__c/fields/Maitre_d_ouvrage__c.field-meta.xml
<CustomField>
    <fullName>Maitre_d_ouvrage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client/MO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projets (Maitre d’ouvrage)</relationshipLabel>
    <relationshipName>Projets1</relationshipName>
    <type>Lookup</type>
</CustomField>