test/force-app/main/default/objects/Projet__c/fields/Maitre_d_ouvrage_Contact__c.field-meta.xml
<CustomField>
    <fullName>Maitre_d_ouvrage_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact (Client/MO)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets (Maitre d’ouvrage - Contact)</relationshipLabel>
    <relationshipName>Projets8</relationshipName>
    <type>Lookup</type>
</CustomField>