test/force-app/main/default/objects/Projet__c/fields/Monnaie__c.field-meta.xml
<CustomField>
    <fullName>Monnaie__c</fullName>
    <label>Monnaie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHF</fullName>
                <default>true</default>
                <label>CHF</label>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>