test/force-app/main/default/objects/Projet__c/fields/Montant_Paiement_client_recevoir__c.field-meta.xml
<CustomField>
    <fullName>Montant_Paiement_client_recevoir__c</fullName>
    <label>À recevoir</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>