test/force-app/main/default/objects/Projet__c/fields/Montant_Potentiel_facturation__c.field-meta.xml
<CustomField>
    <fullName>Montant_Potentiel_facturation__c</fullName>
    <label>Potentiel facturation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>