test/force-app/main/default/objects/Projet__c/fields/Montant_S_trait_ext__c.field-meta.xml
<CustomField>
    <fullName>Montant_S_trait_ext__c</fullName>
    <label>Montant S-trait ext.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>