test/force-app/main/default/objects/Projet__c/fields/NeedsGeocoding__c.field-meta.xml
<CustomField>
    <fullName>NeedsGeocoding__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Needs Geocoding</label>
    <type>Checkbox</type>
</CustomField>