test/force-app/main/default/objects/Projet__c/fields/nformations_facturation__c.field-meta.xml
<CustomField>
    <fullName>nformations_facturation__c</fullName>
    <formula>Nom_du_compte__r.Infos_facturation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informations facturation</label>
    <type>Text</type>
</CustomField>