test/force-app/main/default/objects/Projet__c/fields/No_Projet_del__c.field-meta.xml
<CustomField>
    <fullName>No_Projet_del__c</fullName>
    <formula>Numero_projet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Projet</label>
    <type>Text</type>
</CustomField>