test/force-app/main/default/objects/Projet__c/fields/Non_adjug__c.field-meta.xml
<CustomField>
    <fullName>Non_adjug__c</fullName>
    <label>Non adjugé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>