test/force-app/main/default/objects/Projet__c/fields/Numero_projet__c.field-meta.xml
<CustomField>
    <fullName>Numero_projet__c</fullName>
    <label>Numéro projet</label>
    <length>225</length>
    <type>Text</type>
</CustomField>