test/force-app/main/default/objects/Projet__c/fields/Paye__c.field-meta.xml
<CustomField>
    <fullName>Paye__c</fullName>
    <label>Payé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>