test/force-app/main/default/objects/Projet__c/fields/PMO__c.field-meta.xml
<CustomField>
    <fullName>PMO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sous-traitant 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets (PMO)</relationshipLabel>
    <relationshipName>Projets4</relationshipName>
    <type>Lookup</type>
</CustomField>