test/force-app/main/default/objects/Projet__c/fields/Provenance_projet__c.field-meta.xml
<CustomField>
    <fullName>Provenance_projet__c</fullName>
    <label>Provenance Projet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>Rendez-vous</fullName>
            </value>
            <value>
                <fullName>Plateforme web</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
                <isActive>false</isActive>
                <label>Partenaire</label>
            </value>
            <value>
                <fullName>Publicité</fullName>
                <isActive>false</isActive>
                <label>Publicité</label>
            </value>
            <value>
                <fullName>Recommandation d&apos;un employé</fullName>
                <isActive>false</isActive>
                <label>Recommandation d&apos;un employé</label>
            </value>
            <value>
                <fullName>Recommandation externe</fullName>
                <isActive>false</isActive>
                <label>Recommandation externe</label>
            </value>
            <value>
                <fullName>Site web</fullName>
                <isActive>false</isActive>
                <label>Site web</label>
            </value>
            <value>
                <fullName>Événement client</fullName>
                <isActive>false</isActive>
                <label>Événement client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>