test/force-app/main/default/objects/Projet__c/fields/R_f_client_No_contrat__c.field-meta.xml
<CustomField>
    <fullName>R_f_client_No_contrat__c</fullName>
    <label>Réf. client/No. contrat</label>
    <type>TextArea</type>
</CustomField>