test/force-app/main/default/objects/Projet__c/fields/Raison_de_la_perte__c.field-meta.xml
<CustomField>
    <fullName>Raison_de_la_perte__c</fullName>
    <label>Raison de la perte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perdu contre un concurrent</fullName>
            </value>
            <value>
                <fullName>Pas de budget / Perte de financement</fullName>
            </value>
            <value>
                <fullName>Aucune décision / Non-réponse</fullName>
            </value>
            <value>
                <fullName>Prix</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>