test/force-app/main/default/objects/Projet__c/fields/Responsable_Projet_Contact__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Projet_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sous-traitant 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets</relationshipLabel>
    <relationshipName>Projets</relationshipName>
    <type>Lookup</type>
</CustomField>