test/force-app/main/default/objects/Projet__c/fields/SAIS_com_ID__c.field-meta.xml
<CustomField>
    <fullName>SAIS_com_ID__c</fullName>
    <label>SAIS _com ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>