test/force-app/main/default/objects/Projet__c/fields/Secteur_d_activite__c.field-meta.xml
<CustomField>
    <fullName>Secteur_d_activite__c</fullName>
    <label>Secteur d&apos;activité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fc.00 Dép. Horlogerie - Bijouterie</fullName>
                <label>Dép. Horlogerie</label>
            </value>
            <value>
                <fullName>fc.01 Dép. Agencement - Menuiserie</fullName>
                <label>Dép. Agencement</label>
            </value>
            <value>
                <fullName>Interne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>