test/force-app/main/default/objects/Projet__c/fields/Sous_traitant_4__c.field-meta.xml
<CustomField>
    <fullName>Sous_traitant_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sous-traitant 4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projets (Sous-traitant 4)</relationshipLabel>
    <relationshipName>ProjetsRtwn</relationshipName>
    <type>Lookup</type>
</CustomField>