test/force-app/main/default/objects/Projet__c/fields/Triviso_Date_Creation__c.field-meta.xml
<CustomField>
    <fullName>Triviso_Date_Creation__c</fullName>
    <label>Date de création (Triviso)</label>
    <type>Date</type>
</CustomField>