test/force-app/main/default/objects/Projet__c/fields/Type_projet__c.field-meta.xml
<CustomField>
    <fullName>Type_projet__c</fullName>
    <label>Genre projet</label>
    <length>225</length>
    <type>Text</type>
</CustomField>