test/force-app/main/default/objects/Projet__c/recordTypes/Nouvo_prospect.recordType-meta.xml
<RecordType>
    <fullName>Nouvo_prospect</fullName>
    <active>true</active>
    <label>Nouvo projet</label>
</RecordType>