test/force-app/main/default/objects/Projet__c/recordTypes/wider_Inc.recordType-meta.xml
<RecordType>
    <fullName>wider_Inc</fullName>
    <active>false</active>
    <label>wider Inc</label>
</RecordType>