test/force-app/main/default/objects/Projet__c/validationRules/VR_Architecte_EG.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Architecte_EG</fullName>
    <active>true</active>
    <description>renseigner le Compte Architecte/EG avant de sélectionner un Contact.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Architecte_EG_Contact__c )),
    ISBLANK( Architecte__c )
)</errorConditionFormula>
    <errorMessage>&quot;Veuillez renseigner le Compte Architecte/EG avant de sélectionner un Contact.&quot;</errorMessage>
</ValidationRule>