test/force-app/main/default/objects/Projet__c/validationRules/VR_Facturation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Facturation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(  Facturation_Contact__c  )),
    ISBLANK(  Compte_Facturation__c  )
)</errorConditionFormula>
    <errorMessage>Veuillez renseigner le champ &apos;Facturation-Compte&apos;</errorMessage>
</ValidationRule>