test/force-app/main/default/objects/Projet__c/validationRules/VR_LivraisonContact.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_LivraisonContact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(  Adresse_de_Livraison_2__c  )),
    ISBLANK(  Adresse_de_Livraison__c  )
)</errorConditionFormula>
    <errorMessage>Veuillez renseigner le champ &apos;Adresse Livraison&apos;</errorMessage>
</ValidationRule>