test/force-app/main/default/objects/Projet__c/validationRules/VR_Maitre_ouvrage.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Maitre_ouvrage</fullName>
    <active>true</active>
    <description>renseigner le Compte Maître d&apos;ouvrage avant de sélectionner un Contact</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Maitre_d_ouvrage_Contact__c )),
    ISBLANK( Maitre_d_ouvrage__c )
)</errorConditionFormula>
    <errorMessage>Veuillez renseigner le Compte Maître d&apos;ouvrage avant de sélectionner un Contact.&quot;</errorMessage>
</ValidationRule>