test/force-app/main/default/objects/Projet__c/validationRules/VR_Verrou_Etape_Post_Ouvert.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Verrou_Etape_Post_Ouvert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Etape__c),
    NOT($Permission.Bypass_Verrou_Triviso),
    NOT(ISPICKVAL(PRIORVALUE(Etape__c), &quot;Opportunité&quot;)),
    NOT(ISPICKVAL(PRIORVALUE(Etape__c), &quot;Attribution&quot;))
)</errorConditionFormula>
    <errorDisplayField>Etape__c</errorDisplayField>
    <errorMessage>Cette étape est pilotée automatiquement par la synchronisation Triviso à partir du statut &apos;Ouvert&apos;. Contactez l&apos;équipe technique pour toute correction manuelle.</errorMessage>
</ValidationRule>