test/force-app/main/default/objects/Projet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Numero_projet__c</columns>
    <columns>Nom_du_compte__c</columns>
    <columns>Etape__c</columns>
    <columns>Probabilit__c</columns>
    <columns>Adresse_de_Livraison__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Calculation_net_sans_provision__c</field>
        <operation>equals</operation>
    </filters>
    <label>Tous les projets</label>
</ListView>