test/force-app/main/default/objects/Projet__c/listViews/bois4u.listView-meta.xml
<ListView>
    <fullName>bois4u</fullName>
    <columns>NAME</columns>
    <columns>Numero_projet__c</columns>
    <columns>Nom_du_compte__c</columns>
    <columns>Etape__c</columns>
    <columns>Probabilit__c</columns>
    <columns>Adresse_de_Livraison__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mandant__c</field>
        <operation>equals</operation>
        <value>bois4u</value>
    </filters>
    <label>bois4u</label>
</ListView>